Update core-elements to 0.4.2
R=jakemac@google.com

Review URL: https://codereview.chromium.org//654083003

--- a/example/core_menu_button.html
+++ b/example/core_menu_button.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <template id="myTemplate" is="auto-binding-dart">
 
-    <div layout vertical fit>
+    <div layout vertical fit on-core-select="{{selectAction}}" on-core-activate="{{activateAction}}">
 
       <div class="toolbar toolbar-1" layout horizontal center>
 
