--- a/example/core_scroll_header_panel.html
+++ b/example/core_scroll_header_panel.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="packages/core_elements/core_toolbar.html">
   <link rel="import" href="packages/core_elements/core_icon_button.html">
 
-  <link rel="import" href="packages/core_elements/src/core-scroll-header-panel/demos/lorem-ipsum.html">
+  <link rel="import" href="packages/core_elements/src/core-scroll-header-panel/demos/sample-content.html">
 
   <style shim-shadowdom>
 
@@ -64,7 +64,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     .content {
-      padding: 10px 30px;
+      padding: 8px;
+      background-color: #eee;
     }
 
   </style>
@@ -86,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="content">
 
-      <lorem-ipsum paragraphs="100"></lorem-ipsum>
+      <sample-content size="100"></sample-content>
 
     </div>
 
