--- a/example/core_list_dart.html
+++ b/example/core_list_dart.html
@@ -10,14 +10,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
   <title>core-list-dart</title>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <link rel="import" href="packages/core_elements/core_list_dart.html">
 
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      -webkit-tap-highlight-color: transparent;
+      overflow: hidden;
     }
 
     list-test {
@@ -33,17 +34,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
   </style>
 </head>
-<body>
+<body fit>
 
 <list-test></list-test>
 
-<polymer-element name="list-test">
+<polymer-element name="list-test" layout vertical>
 <template>
   <style>
-    core-list-dart {
-      height: 100%;
-    }
-
     .item {
       box-sizing: border-box;
       height: 80px;
@@ -80,16 +77,62 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .body {
       font-size: 12px;
     }
+
+    .spaced {
+      margin: 10px;
+    }
+
+    .selection-display {
+      background: lightgray;
+      padding: 0 5px;
+      margin: 0 5px;
+    }
+
+    .narrow {
+      width: 40px;
+    }
+
   </style>
 
-  <core-list-dart id="list" data="{{data}}" height="80">
+  <div class="spaced">
+    <button on-tap="{{addRecord}}">Add row at index:</button>
+    <input value="{{addIdx}}" class="narrow" type="number">
+    <br>
+    <button on-tap="{{deleteRecord}}">Delete row at index:</button>
+    <input value="{{deleteIdx}}" class="narrow" type="number">
+    <br>
+    <button on-tap="{{deleteAll}}">Delete all</button>
+    <button on-tap="{{deleteArray}}">Delete data array</button>
+    <button on-tap="{{initArrayEmpty}}">Init empty array</button>
+    <button on-tap="{{initArrayFull}}">Init full array</button>
+    <br>
+    <label><input type="checkbox" checked="{{selectionEnabled}}">Selection enabled</label>
+    <label><input type="checkbox" checked="{{multi}}">Multiple selection</label>
+    <br>
+    <button on-tap="{{clearSelection}}">Clear selection</button>
+    <button on-tap="{{deleteSelection}}">Delete selection</button>
+  </div>
+  <div layout horizontal wrap class="spaced">
+    Selected values:
+    <!--
+      Dart note: without the 'if' this seems to incorrectly evaluate [null] as
+      if a null model is allowed. dartbug.com/21354
+    -->
+    <template repeat="{{multi ? selection : [selection]}}" if="{{selection}}">
+      <div class="selection-display">Id {{id}}: {{checked}} {{value}} {{['a', 'b', 'c'][type]}}</div>
+    </template>
+  </div>
+  <core-list-dart id="list" data="{{data}}" selectionEnabled="{{selectionEnabled}}"
+    selection="{{selection}}" height="80" flex multi?={{multi}}>
     <template>
       <div class="{{ {item: true, selected: selected} }}">
-        <div class="message" style="background-image: url(images/{{index % 4}}.png);">
-          <span class="from">{{name}}</span>
-          <span class="timestamp">{{time}}</span>
-          <div class="subject">Infinite List. {{index}}</div>
-          <div class="body">{{details}}</div>
+        <div class="message" style="background-image: url(images/{{model.image}}.png);">
+          <span class="from">{{model.name}}</span>
+          <div class="subject">Row: {{index}}, Record ID: {{model.id}}</div>
+          <input type="checkbox" checked="{{model.checked}}">
+          <input type="number" value="{{model.value}}" class="narrow">
+          <select selectedIndex="{{model.type}}"><option>a</option><option>b</option><option>c</option></select>
+          <span class="body">{{model.details}}</span>
         </div>
       </div>
     </template>
