fix scrollToItem in checked mode and add option to example for it

--- a/example/core_list_dart.html
+++ b/example/core_list_dart.html
@@ -101,6 +101,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <button on-tap="{{deleteRecord}}">Delete row at index:</button>
     <input value="{{deleteIdx}}" class="narrow" type="number">
     <br>
+    <button on-tap="{{scrollTo}}">Scroll to item at index:</button>
+    <input value="{{scrollToIdx}}" class="narrow" type="number">
+    <br>
     <button on-tap="{{deleteAll}}">Delete all</button>
     <button on-tap="{{deleteArray}}">Delete data array</button>
     <button on-tap="{{initArrayEmpty}}">Init empty array</button>
