--- a/test/core_ajax_dart_progress_test.html
+++ b/test/core_ajax_dart_progress_test.html
@@ -9,14 +9,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-ajax-dart</title>
+    <title>core-ajax-dart progress</title>
 
     <script src="packages/unittest/test_controller.js"></script>
     <link rel='import' href='packages/core_elements/core_ajax_dart.html'>
 
   </head>
   <body>
-    <core-ajax-dart></core-ajax-dart>
-    <script type="application/dart" src="core_ajax_dart_test.dart"></script>
+    <core-ajax-dart
+      handleAs="json"
+      auto></core-ajax-dart>
+    <script type="application/dart" src="core_ajax_dart_progress_test.dart"></script>
   </body>
 </html>
